[gd_scene load_steps=11 format=3 uid="uid://3qiobxm5gx6k"]

[ext_resource type="Script" path="res://UIObjects/InventoryUI/ShopMenuUI/BuyMenuUI.gd" id="1_7kmks"]
[ext_resource type="FontFile" uid="uid://cfesmr0va1fab" path="res://UIObjects/Assets/Fonts/VCR_OSD_MONO.ttf" id="2_1l6yt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uoiru"]
bg_color = Color(0.0768361, 0.0768358, 0.0768356, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pej3f"]
bg_color = Color(0.0768361, 0.0768358, 0.0768356, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xgovj"]
bg_color = Color(0.0768361, 0.0768358, 0.0768356, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rvgin"]
bg_color = Color(0.0768361, 0.0768358, 0.0768356, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 1

[sub_resource type="Theme" id="Theme_u36c4"]
LineEdit/font_sizes/font_size = 24
LineEdit/fonts/font = ExtResource("2_1l6yt")
LineEdit/styles/focus = SubResource("StyleBoxFlat_pej3f")
LineEdit/styles/normal = SubResource("StyleBoxFlat_xgovj")
LineEdit/styles/read_only = SubResource("StyleBoxFlat_rvgin")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dhi6h"]
bg_color = Color(0.0768361, 0.0768358, 0.0768356, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_swlfr"]
bg_color = Color(0.489623, 0.489622, 0.489621, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vwcd3"]
bg_color = Color(0.489623, 0.489622, 0.489621, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 1

[node name="BuyMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7kmks")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_right = 175.0
offset_bottom = 379.0
grow_horizontal = 2
theme_override_constants/separation = 14

[node name="DisplayNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_1l6yt")
theme_override_font_sizes/font_size = 28
text = "Item Name"
horizontal_alignment = 1

[node name="ItemBackground" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_uoiru")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ItemBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ItemImage" type="TextureRect" parent="VBoxContainer/ItemBackground/MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="StockRemainingText" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1l6yt")
theme_override_font_sizes/font_size = 24
text = "Stock Remaining:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="QuantityLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1l6yt")
theme_override_font_sizes/font_size = 24
text = "Quantity:"
horizontal_alignment = 1

[node name="ValueInputSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_u36c4")
min_value = 1.0
max_value = 1000.0
value = 1.0
rounded = true
alignment = 1
update_on_text_changed = true

[node name="PriceText" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1l6yt")
theme_override_font_sizes/font_size = 24
text = "Price: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuyButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_1l6yt")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_dhi6h")
theme_override_styles/hover = SubResource("StyleBoxFlat_swlfr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vwcd3")
text = "Buy"

[node name="ErrorMessage" type="Label" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.986296, 5.17406e-06, 1.54018e-06, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("2_1l6yt")
theme_override_font_sizes/font_size = 20
text = "Error"
autowrap_mode = 2

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/ValueInputSpinBox" to="." method="on_buy_quantity_input_change"]
[connection signal="pressed" from="VBoxContainer/BuyButton" to="." method="handle_buy"]
